# receipt-voiceover

./: LICENSE  README.md  main.py  pyproject.toml
